force-app/main/default/objects/cgcloud__CP_Calculation_Schema_Step__c/cgcloud__CP_Calculation_Schema_Step__c.object-meta.xml
<CustomObject>
    <description>This object holds the details of the relationship between calculation schema and pricing condition template, used for calculation steps that belong to a calculation schema.</description>
    <label>Calculation Schema Step</label>
    <nameField>
        <displayFormat>CSS-{000000}</displayFormat>
        <label>Calculation Schema Step Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Calculation Schema Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>