force-app/main/default/objects/cgcloud__CP_Calculation_Schema_Step__c/fields/cgcloud__Accrual__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Accrual__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if the calculation step is an accrual step.</description>
    <label>Accrual</label>
    <type>Checkbox</type>
</CustomField>