force-app/main/default/objects/cgcloud__CP_Calculation_Schema_Step__c/fields/cgcloud__Base_User_Exit_Id__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Base_User_Exit_Id__c</fullName>
    <description>Unique identifier for the user exit that modifies the basis value of the calculation.</description>
    <label>Base User Exit Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>