force-app/main/default/objects/cgcloud__CP_Calculation_Schema_Step__c/fields/cgcloud__Calculation_Groups__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Calculation_Groups__c</fullName>
    <description>Specifies all calculation groups that are relevant for the calculation step.</description>
    <label>Calculation Groups</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>FreeItem</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>