force-app/main/default/objects/cgcloud__CP_Calculation_Schema_Step__c/fields/cgcloud__Calculation_Schema__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Calculation_Schema__c</fullName>
    <description>Reference to the calculation schema record.</description>
    <label>Calculation Schema</label>
    <referenceTo>cgcloud__CP_Calculation_Schema__c</referenceTo>
    <relationshipLabel>Calculation Schema Steps</relationshipLabel>
    <relationshipName>Calculation_Schema_Steps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>