force-app/main/default/objects/cgcloud__CP_Calculation_Schema_Step__c/fields/cgcloud__Interim_Value__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Interim_Value__c</fullName>
    <description>Auxiliary variable that can be used for storing the result of the step (Copy) or for summing up the current item value (carry over) as interim value.</description>
    <label>Interim Value</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CarryOver(1)</fullName>
            </value>
            <value>
                <fullName>CarryOver(2)</fullName>
            </value>
            <value>
                <fullName>CarryOver(3)</fullName>
            </value>
            <value>
                <fullName>CarryOver(4)</fullName>
            </value>
            <value>
                <fullName>CarryOver(5)</fullName>
            </value>
            <value>
                <fullName>CarryOver(6)</fullName>
            </value>
            <value>
                <fullName>Copy1</fullName>
            </value>
            <value>
                <fullName>Copy2</fullName>
            </value>
            <value>
                <fullName>Copy3</fullName>
            </value>
            <value>
                <fullName>Copy4</fullName>
            </value>
            <value>
                <fullName>Copy5</fullName>
            </value>
            <value>
                <fullName>Copy6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>