force-app/main/default/objects/cgcloud__CP_Calculation_Schema_Step__c/fields/cgcloud__Mandatory__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if a calculation step is mandatory: If no matching condition records have been found, the calculation stops with an error message.</description>
    <label>Mandatory</label>
    <type>Checkbox</type>
</CustomField>