force-app/main/default/objects/cgcloud__CP_Calculation_Schema_Step__c/fields/cgcloud__Position__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Position__c</fullName>
    <label>Position</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>