force-app/main/default/objects/cgcloud__CP_Calculation_Schema_Step__c/fields/cgcloud__Pricing_Condition_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Pricing_Condition_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the pricing condition template.</description>
    <label>Pricing Condition Template</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You can only select Active Search Strategies</errorMessage>
        <filterItems>
            <field>cgcloud__CP_Pricing_Condition_Template__c.cgcloud__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__CP_Pricing_Condition_Template__c</referenceTo>
    <relationshipLabel>Calculation Schema Steps</relationshipLabel>
    <relationshipName>Calculation_Schema_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>