force-app/main/default/objects/cgcloud__CP_Calculation_Schema_Step__c/fields/cgcloud__Print_Relevant__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Print_Relevant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies whether the calculation step is print relevant.</description>
    <label>Print Relevant</label>
    <type>Checkbox</type>
</CustomField>