force-app/main/default/objects/cgcloud__CP_Calculation_Schema_Step__c/fields/cgcloud__Selectable_Promotion_Skip__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Selectable_Promotion_Skip__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Selectable Promotion Skip</label>
    <type>Checkbox</type>
</CustomField>