force-app/main/default/objects/cgcloud__CP_Calculation_Schema_Step__c/fields/cgcloud__Statistical__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Statistical__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if the calculation step is a statistical step.</description>
    <label>Statistical</label>
    <type>Checkbox</type>
</CustomField>