force-app/main/default/objects/cgcloud__CP_Calculation_Schema_Step__c/fields/cgcloud__Step__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Step__c</fullName>
    <description>Position of calculation step within the calculation schema.</description>
    <label>Step</label>
    <length>80</length>
    <type>Text</type>
</CustomField>