force-app/main/default/objects/cgcloud__CP_Calculation_Schema_Step__c/fields/cgcloud__Step_Constraint__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Step_Constraint__c</fullName>
    <description>Defines a constraint for the calculation step. If the constraint is not fulfilled the calculation step will be skipped.</description>
    <label>Constraint</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>