force-app/main/default/objects/cgcloud__CP_Calculation_Schema_Step__c/fields/cgcloud__Step_Reference__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Step_Reference__c</fullName>
    <description>Defines the calculation steps that are used as basis of the current calculation step.</description>
    <label>Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>