force-app/main/default/objects/cgcloud__CP_Calculation_Schema_Step__c/fields/cgcloud__Target_Condition__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Target_Condition__c</fullName>
    <description>Specification of the line item attribute or sales document attribute that will receive the value of the found condition.</description>
    <label>Target Condition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MerchandiseValueReceipt</fullName>
            </value>
            <value>
                <fullName>TotalValueReceipt</fullName>
            </value>
            <value>
                <fullName>GrossTotalValueReceipt</fullName>
            </value>
            <value>
                <fullName>BasePriceReceipt</fullName>
            </value>
            <value>
                <fullName>PriceReceipt</fullName>
            </value>
            <value>
                <fullName>ValueReceipt</fullName>
            </value>
            <value>
                <fullName>GrossValueReceipt</fullName>
            </value>
            <value>
                <fullName>PricingInfo1</fullName>
            </value>
            <value>
                <fullName>PricingInfo2</fullName>
            </value>
            <value>
                <fullName>PricingInfo3</fullName>
            </value>
            <value>
                <fullName>PricingInfo4</fullName>
            </value>
            <value>
                <fullName>PricingInfo5</fullName>
            </value>
            <value>
                <fullName>PricingInfo6</fullName>
            </value>
            <value>
                <fullName>PricingInfo7</fullName>
            </value>
            <value>
                <fullName>PricingInfo8</fullName>
            </value>
            <value>
                <fullName>PricingInfo9</fullName>
            </value>
            <value>
                <fullName>PricingInfo10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>