force-app/main/default/objects/cgcloud__CP_Calculation_Schema_Step__c/fields/cgcloud__User_Exit_Id__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__User_Exit_Id__c</fullName>
    <description>Unique identifier for the user exit of the calculation step</description>
    <label>User Exit Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>