force-app/main/default/objects/cgcloud__CP_Calculation_Schema_Step__c/validationRules/cgcloud__Check_If_Accruals_Step_Is_Statistical.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_If_Accruals_Step_Is_Statistical</fullName>
    <active>true</active>
    <errorConditionFormula>IF( 
cgcloud__Accrual__c = true,  
IF( cgcloud__Statistical__c  = false,  true , false), 
false)</errorConditionFormula>
    <errorMessage>Step must be marked as &apos;Statistical&apos; if the Step is marked as &apos;Accrual&apos;.</errorMessage>
</ValidationRule>