force-app/main/default/objects/cgcloud__CP_Calculation_Schema_Step__c/validationRules/cgcloud__Check_If_OrderHeader_No_Interim_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_If_OrderHeader_No_Interim_Value</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
 ISPICKVAL( cgcloud__Pricing_Condition_Template__r.cgcloud__Condition_Level__c , &apos;OrderHeader&apos;), 
 NOT ( ISPICKVAL(cgcloud__Interim_Value__c, &apos;&apos;)  ),
false)</errorConditionFormula>
    <errorMessage>Interim Value must be empty if the Condition Level is &apos;Order Header&apos;.</errorMessage>
</ValidationRule>