force-app/main/default/objects/cgcloud__CP_Calculation_Schema_Step__c/validationRules/cgcloud__Check_Item_Meta_Rule_If_Grouping.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_Item_Meta_Rule_If_Grouping</fullName>
    <active>true</active>
    <errorConditionFormula>IF( 
 cgcloud__Pricing_Condition_Template__r.cgcloud__Item_Grouping__c ,  
 ISPICKVAL( cgcloud__Item_Meta_Rule__c , &apos;&apos;) , 
false)</errorConditionFormula>
    <errorMessage>Item Meta Rule can&apos;t be empty if the Step is marked as &apos;Grouping&apos;.</errorMessage>
</ValidationRule>