force-app/main/default/objects/cgcloud__CP_Calculation_Schema_Step__c/validationRules/cgcloud__Check_Sales_Org.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_Sales_Org</fullName>
    <active>true</active>
    <description>The Pricing Calculation Template and the Calculation Schema must have the same Sales Org.</description>
    <errorConditionFormula>TEXT(cgcloud__Pricing_Condition_Template__r.cgcloud__Sales_Org__c) != TEXT(cgcloud__Calculation_Schema__r.cgcloud__Sales_Org__c)</errorConditionFormula>
    <errorMessage>The Pricing Condition Template and the Calculation Schema must have the same Sales Org.</errorMessage>
</ValidationRule>