force-app/main/default/objects/cgcloud__CP_Calculation_Schema_Step__c/validationRules/cgcloud__Position_greather_than_0.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Position_greather_than_0</fullName>
    <active>true</active>
    <errorConditionFormula>cgcloud__Position__c  &lt; 1</errorConditionFormula>
    <errorMessage>The Position must be a number greater than 0.</errorMessage>
</ValidationRule>